--- a/.github/workflows/continue-cli-review.yaml
+++ b/.github/workflows/continue-cli-review.yaml
@@ -92,6 +92,6 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: `## PR Review\n\n${reviewContent}`
+                body: reviewContent
               });
             }
