--- a/core/package.json
+++ b/core/package.json
@@ -78,6 +78,7 @@
     "handlebars": "^4.7.8",
     "http-proxy-agent": "^7.0.1",
     "https-proxy-agent": "^7.0.3",
+    "iconv-lite": "^0.6.3",
     "ignore": "^5.3.1",
     "is-localhost-ip": "^2.0.0",
     "jinja-js": "0.1.8",
