feat: basic ink tui

--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@continuedev/openai-adapters": "^1.0.18",
     "@continuedev/sdk": "^0.0.12",
     "@modelcontextprotocol/sdk": "^1.9.0",
+    "@types/react": "^19.1.8",
     "@workos-inc/node": "^7.45.0",
     "axios": "^1.8.4",
     "chalk": "^5.4.1",
     "diff": "^7.0.0",
     "dotenv": "^16.5.0",
+    "ink": "^6.0.1",
     "open": "^10.1.0",
+    "react": "^19.1.0",
     "readline-sync": "^1.4.10",
     "uuid": "^9.0.1"
   },
