--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "outDir": "dist",
     "declaration": true,
     "sourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "jsx": "react"
   },
   "include": ["src/**/*"]
 }
