--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "chalk": "^5.4.1",
     "diff": "^7.0.0",
     "dotenv": "^16.5.0",
+    "ignore-walk": "^7.0.0",
     "ink": "^6.0.1",
+    "minimatch": "^10.0.3",
     "open": "^10.1.0",
     "react": "^19.1.0",
     "readline-sync": "^1.4.10",
@@ -52,6 +54,7 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@types/diff": "^7.0.2",
+    "@types/ignore-walk": "^4.0.3",
     "@types/jest": "^29.5.14",
     "@types/readline-sync": "^1.4.8",
     "@types/uuid": "^9.0.8",
