Add file search functionality with @ trigger in user input

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chalk": "^5.4.1",
     "diff": "^7.0.0",
     "dotenv": "^16.5.0",
+    "glob": "^11.0.3",
     "ignore-walk": "^7.0.0",
     "ink": "^6.0.1",
     "minimatch": "^10.0.3",
@@ -54,6 +55,7 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@types/diff": "^7.0.2",
+    "@types/glob": "^8.1.0",
     "@types/ignore-walk": "^4.0.3",
     "@types/jest": "^29.5.14",
     "@types/readline-sync": "^1.4.8",
