--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,5 @@
   "conventionalCommits.promptBody": false,
   "conventionalCommits.promptFooter": false,
   "conventionalCommits.promptScopes": true,
-  "conventionalCommits.scopes": ["reg"],
-  "java.compile.nullAnalysis.mode": "disabled"
+  "conventionalCommits.scopes": ["reg"]
 }
