code block syntax highlighting with lowlight because prism wasn't working

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "glob": "^11.0.3",
     "ignore-walk": "^7.0.0",
     "ink": "^6.0.1",
+    "lowlight": "^3.3.0",
     "minimatch": "^10.0.3",
     "open": "^10.1.0",
     "react": "^19.1.0",
