--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@continuedev/sdk": "^0.0.12",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@types/react": "^19.1.8",
+    "@types/turndown": "^5.0.5",
     "@workos-inc/node": "^7.45.0",
     "axios": "^1.8.4",
     "chalk": "^5.4.1",
@@ -51,6 +52,7 @@
     "open": "^10.1.0",
     "react": "^19.1.0",
     "readline-sync": "^1.4.10",
+    "turndown": "^7.2.0",
     "typescript": "^5.8.3",
     "uuid": "^9.0.1"
   },
