use continue sdk

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@continuedev/config-yaml": "^1.0.96",
     "@continuedev/openai-adapters": "1.0.46-beta",
-    "@continuedev/sdk": "^0.0.12",
+    "@continuedev/sdk": "file:../continue/packages/continue-sdk/typescript",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@types/react": "^19.1.8",
     "@types/turndown": "^5.0.5",
