make it a commander CLI

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@workos-inc/node": "^7.45.0",
     "axios": "^1.8.4",
     "chalk": "^5.4.1",
+    "commander": "^14.0.0",
     "diff": "^7.0.0",
     "dotenv": "^16.5.0",
     "glob": "^11.0.3",
