--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "readline-sync": "^1.4.10",
     "turndown": "^7.2.0",
     "typescript": "^5.8.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yaml": "^2.8.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
