--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -25,6 +25,6 @@ jobs:
           npm run build
 
       - name: Run Continue CLI
-        run: npm run start -- --config nate/default-assistant --headless "Please review the last changes to this codebase and provide some feedback. Then, if the changes had problems that indicate they should not be merged into production, then please call the 'exit' tool to fail the GitHub Action."
+        run: npm run start -- --config nate/default-assistant -p "Please review the last changes to this codebase and provide some feedback. Then, if the changes had problems that indicate they should not be merged into production, then please call the 'exit' tool to fail the GitHub Action."
         env:
           CONTINUE_API_KEY: ${{ secrets.CONTINUE_API_KEY }}
