--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    # Run every day at 9am UTC
+    - cron: "0 9 * * *"
+  workflow_dispatch:
+    # Allow manual triggering
 
 permissions:
   contents: write
