add voyage api key and run oai tests in pr checks

--- a/.github/workflows/reusable-release.yml
+++ b/.github/workflows/reusable-release.yml
@@ -30,6 +30,8 @@ on:
         required: false
       AZURE_OPENAI_GPT41_API_KEY:
         required: false
+      VOYAGE_API_KEY:
+        required: false
 
 permissions:
   contents: write
@@ -71,6 +73,7 @@ jobs:
           AZURE_FOUNDRY_CODESTRAL_API_KEY: ${{ secrets.AZURE_FOUNDRY_CODESTRAL_API_KEY }}
           AZURE_FOUNDRY_MISTRAL_SMALL_API_KEY: ${{ secrets.AZURE_FOUNDRY_MISTRAL_SMALL_API_KEY }}
           AZURE_OPENAI_GPT41_API_KEY: ${{ secrets.AZURE_OPENAI_GPT41_API_KEY }}
+          VOYAGE_API_KEY: ${{ secrets.VOYAGE_API_KEY }}
 
       - name: Release
         env:
