ci: install semantic release deps

--- a/packages/openai-adapters/package.json
+++ b/packages/openai-adapters/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
     "@types/follow-redirects": "^1.14.4",
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
