--- a/packages/openai-adapters/package.json
+++ b/packages/openai-adapters/package.json
@@ -26,10 +26,16 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/follow-redirects": "^1.14.4",
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "cross-env": "^7.0.3",
+    "semantic-release": "^24.2.7",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "vitest": "^1.6.1"
