some more e2e tests

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/ignore-walk": "^4.0.3",
     "@types/ink-testing-library": "^1.0.4",
     "@types/jest": "^29.5.14",
+    "@types/nock": "^10.0.3",
     "@types/readline-sync": "^1.4.8",
     "@types/uuid": "^9.0.8",
     "conventional-changelog-conventionalcommits": "^9.1.0",
@@ -74,6 +75,7 @@
     "execa": "^9.6.0",
     "ink-testing-library": "^4.0.0",
     "jest": "^29.7.0",
+    "nock": "^14.0.5",
     "semantic-release": "^24.2.7",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
