--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "turndown": "^7.2.0",
     "typescript": "^5.8.3",
     "uuid": "^9.0.1",
+    "winston": "^3.17.0",
     "yaml": "^2.8.0"
   },
   "devDependencies": {
