--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/src/index.ts",
-      "args": ["--config", "nate/default-assistant"],
+      "args": [],
       "env": {
         "NODE_ENV": "development"
       },
