support --rule from hub

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "glob": "^11.0.3",
     "ignore-walk": "^7.0.0",
     "ink": "^6.0.1",
+    "jszip": "^3.10.1",
     "lowlight": "^3.3.0",
     "minimatch": "^10.0.3",
     "node-fetch": "^3.3.2",
@@ -67,6 +68,7 @@
     "@types/ignore-walk": "^4.0.3",
     "@types/ink-testing-library": "^1.0.4",
     "@types/jest": "^29.5.14",
+    "@types/jszip": "^3.4.0",
     "@types/nock": "^10.0.3",
     "@types/readline-sync": "^1.4.8",
     "conventional-changelog-conventionalcommits": "^9.1.0",
