--- a/package.json
+++ b/package.json
@@ -35,6 +35,14 @@
     "@continuedev/openai-adapters": "^1.0.48-beta",
     "@continuedev/sdk": "^0.0.13",
     "@modelcontextprotocol/sdk": "^1.9.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.203.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@opentelemetry/instrumentation-fs": "^0.23.0",
+    "@opentelemetry/instrumentation-http": "^0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@types/react": "^19.1.8",
     "@types/turndown": "^5.0.5",
     "@workos-inc/node": "^7.45.0",
