--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/semantic-conventions": "^1.36.0",
+    "@types/express": "^5.0.3",
     "@types/react": "^19.1.8",
     "@types/turndown": "^5.0.5",
     "@workos-inc/node": "^7.45.0",
@@ -50,6 +51,7 @@
     "commander": "^14.0.0",
     "diff": "^7.0.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "glob": "^11.0.3",
     "ignore-walk": "^7.0.0",
     "ink": "^6.0.1",
