--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Run tests (excluding e2e on Windows)
         if: matrix.os == 'windows-latest'
-        run: npm test -- --testPathIgnorePatterns=src/e2e
+        run: npm test -- --testPathIgnorePatterns="<rootDir>/src/e2e"
 
       - name: Run linting
         run: npm run lint
