--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -6,6 +6,11 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   test:
     strategy:
@@ -59,7 +64,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test
-      - continue-review
 
     steps:
       - name: Decide whether the needed jobs succeeded or failed
