custom prompt test

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -53,6 +53,7 @@ jobs:
     uses: ./.github/workflows/continue-review.yaml
     with:
       assistant: "nate/default-assistant"
+      custom_prompt: "Always respond in spanish"
     secrets:
       CONTINUE_API_KEY: ${{ secrets.CONTINUE_API_KEY }}
 
