--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -53,7 +53,8 @@ jobs:
     uses: ./.github/workflows/continue-review.yaml
     with:
       assistant: "nate/default-assistant"
-      custom_prompt: "Always respond in spanish"
+      custom_prompt: |
+        Please review the above changes for any mistakes. You can look around the codebase to investigate if needed. Give your review in spanish.
     secrets:
       CONTINUE_API_KEY: ${{ secrets.CONTINUE_API_KEY }}
 
