--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -54,7 +54,11 @@ jobs:
     with:
       assistant: "nate/default-assistant"
       custom_prompt: |
-        Please review the below changes for any mistakes. You can look around the codebase to investigate if needed. Give your review in spanish.
+        Please review the below changes for any mistakes. You can look around the codebase to investigate if needed. Look for:
+         - React changes causing too many re-renders
+         - Functions that are too long
+         - Other potentially subtle bugs
+        Keep your response concise and give a bullet pointed list of the findings, including suggested fixes for any problems you find.
     secrets:
       CONTINUE_API_KEY: ${{ secrets.CONTINUE_API_KEY }}
 
