Add debug configuration for core binary
Adds a new "Core Binary (Debug)" launch configuration to VS Code. This allows for direct debugging of the Node.js binary.

- Creates a `binary:rebuild` task to build the binary before launching.
- Sets development-specific environment variables for the debug session.
- Ignores the `.cursor` directory.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,23 @@
       }
     },
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Core Binary (Debug)",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/binary/out/index.js",
+      "outFiles": ["${workspaceFolder}/binary/out/**/*.js"],
+      "sourceMaps": true,
+      "smartStep": true,
+      "internalConsoleOptions": "openOnSessionStart",
+      "cwd": "${workspaceFolder}/binary",
+      "preLaunchTask": "binary:rebuild",
+      "env": {
+        "CONTINUE_DEVELOPMENT": "true",
+        "CONTINUE_GLOBAL_DIR": "${workspaceFolder}/extensions/.continue-debug"
+      }
+    },
+    {
       "name": "Debug Jest Tests",
       "type": "node",
       "request": "launch",
@@ -55,7 +72,6 @@
         "--config",
         "${workspaceRoot}/core/jest.config.js"
       ],
-
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     },
