--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/jszip": "^3.4.0",
     "@types/nock": "^10.0.3",
     "@types/readline-sync": "^1.4.8",
+    "@types/supertest": "^6.0.3",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "cross-env": "^7.0.3",
     "execa": "^9.6.0",
@@ -90,6 +91,7 @@
     "jest": "^29.7.0",
     "nock": "^14.0.5",
     "semantic-release": "^24.2.7",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
