--- a/core/package.json
+++ b/core/package.json
@@ -60,6 +60,7 @@
     "@modelcontextprotocol/sdk": "^1.12.0",
     "@mozilla/readability": "^0.5.0",
     "@octokit/rest": "^20.1.1",
+    "@sentry/node": "^9.40.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@xenova/transformers": "2.14.0",
     "adf-to-md": "^1.1.0",
