--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -244,6 +244,12 @@
         "group": "Continue"
       },
       {
+        "command": "continue.shareSession",
+        "category": "Continue",
+        "title": "Share Current Chat Session as Markdown",
+        "group": "Continue"
+      },
+      {
         "command": "continue.viewHistory",
         "category": "Continue",
         "title": "View History",
